--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "nodemon": "^3.1.0",
+    "puppeteer": "^22.10.0",
     "require-dir": "^1.2.0"
   }
 }
