--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Flife11/Online-Reader#readme",
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "nodemon": "^3.1.0",
     "puppeteer": "^22.10.0",
