--- a/backend/package.json
+++ b/backend/package.json
@@ -20,8 +20,10 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
+    "epub-gen": "^0.1.0",
     "express": "^4.19.2",
     "nodemon": "^3.1.2",
+    "pdfkit": "^0.15.0",
     "require-dir": "^1.2.0"
   }
 }
