--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
+    "file-saver": "^2.0.5",
     "html-react-parser": "^5.1.10",
     "nodemon": "^3.1.2",
     "normalize.css": "^8.0.1",
