--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
-    "@mui/material": "^5.15.19",
+    "@mui/icons-material": "^5.16.0",
+    "@mui/material": "^5.16.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +19,8 @@
     "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
     "file-saver": "^2.0.5",
+    "firebase": "^10.12.2",
+    "firebase-auth": "^0.1.2",
     "html-react-parser": "^5.1.10",
     "nodemon": "^3.1.2",
     "normalize.css": "^8.0.1",
