--- a/.github/workflows/main_online-reader.yml
+++ b/.github/workflows/main_online-reader.yml
@@ -26,12 +26,21 @@ jobs:
         username: ${{ secrets.AzureAppService_ContainerUsername_e84a458e81974bac9ae7bbccd4dafbe6 }}
         password: ${{ secrets.AzureAppService_ContainerPassword_a947029d081e4ac5a5bed3b076bac7cc }}
 
-    - name: Build and push container image to registry
+    - name: Build and push backend container image to registry
       uses: docker/build-push-action@v3
       with:
+        context: ./backend
         push: true
-        tags: registry0104.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_e84a458e81974bac9ae7bbccd4dafbe6 }}/samples/online-reader:${{ github.sha }}
-        file: ./Dockerfile
+        tags: registry0104.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_e84a458e81974bac9ae7bbccd4dafbe6 }}/samples/online-reader-backend:${{ github.sha }}
+        file: ./backend/Dockerfile
+
+    - name: Build and push frontend container image to registry
+      uses: docker/build-push-action@v3
+      with:
+        context: ./frontend
+        push: true
+        tags: registry0104.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_e84a458e81974bac9ae7bbccd4dafbe6 }}/samples/online-reader-frontend:${{ github.sha }}
+        file: ./frontend/Dockerfile
 
   deploy:
     runs-on: ubuntu-latest
@@ -41,11 +50,20 @@ jobs:
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
-    - name: Deploy to Azure Web App
-      id: deploy-to-webapp
+    - name: Deploy backend to Azure Web App
+      id: deploy-backend-to-webapp
       uses: azure/webapps-deploy@v2
       with:
-        app-name: 'online-reader'
+        app-name: 'online-reader-backend'
         slot-name: 'production'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_93eac78225294aea9fd563d5c3d27b3c }}
-        images: 'registry0104.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_e84a458e81974bac9ae7bbccd4dafbe6 }}/samples/online-reader:${{ github.sha }}'
+        images: 'registry0104.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_e84a458e81974bac9ae7bbccd4dafbe6 }}/samples/online-reader-backend:${{ github.sha }}'
+
+    - name: Deploy to Azure Web App
+      id: deploy-frontend-to-webapp
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: 'online-reader-frontend'
+        slot-name: 'production'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_93eac78225294aea9fd563d5c3d27b3c }}
+        images: 'registry0104.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_e84a458e81974bac9ae7bbccd4dafbe6 }}/samples/online-reader-frontend:${{ github.sha }}'
