--- a/.github/workflows/main_online-reader.yml
+++ b/.github/workflows/main_online-reader.yml
@@ -54,7 +54,7 @@ jobs:
       id: deploy-backend-to-webapp
       uses: azure/webapps-deploy@v2
       with:
-        app-name: 'online-reader-backend'
+        app-name: 'online-reader'
         slot-name: 'production'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_93eac78225294aea9fd563d5c3d27b3c }}
         images: 'registry0104.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_e84a458e81974bac9ae7bbccd4dafbe6 }}/samples/online-reader-backend:${{ github.sha }}'
@@ -63,7 +63,7 @@ jobs:
       id: deploy-frontend-to-webapp
       uses: azure/webapps-deploy@v2
       with:
-        app-name: 'online-reader-frontend'
+        app-name: 'online-reader'
         slot-name: 'production'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_93eac78225294aea9fd563d5c3d27b3c }}
         images: 'registry0104.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_e84a458e81974bac9ae7bbccd4dafbe6 }}/samples/online-reader-frontend:${{ github.sha }}'
