--- a/.github/workflows/main_online-reader.yml
+++ b/.github/workflows/main_online-reader.yml
@@ -7,6 +7,8 @@ on:
   push:
     branches:
       - main
+    tags:
+      - '*'
   workflow_dispatch:
 
 jobs:
@@ -16,6 +18,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - run: ls -la
+
+    - name: Create .env file
+      run: |
+        echo "API_KEY = ${{secrets.REACT_APP_BACKEND_API}}" >> frontend/.env
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
@@ -60,7 +66,7 @@ jobs:
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_93eac78225294aea9fd563d5c3d27b3c }}
         images: 'registry0104.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_e84a458e81974bac9ae7bbccd4dafbe6 }}/samples/online-reader-backend:${{ github.sha }}'
 
-    - name: Deploy frontend backend to Azure Web App
+    - name: Deploy frontend to Azure Web App
       id: deploy-frontend-to-webapp
       uses: azure/webapps-deploy@v2
       with:
