--- a/.github/workflows/main_online-reader.yml
+++ b/.github/workflows/main_online-reader.yml
@@ -8,7 +8,7 @@ on:
     branches:
       - main
     tags:
-      - '*'
+      - 'v*'
   workflow_dispatch:
 
 jobs:
@@ -21,7 +21,7 @@ jobs:
 
     - name: Create .env file
       run: |
-        echo "API_KEY = ${{secrets.REACT_APP_BACKEND_API}}" >> frontend/.env
+        echo "REACT_APP_BACKEND_API = ${{secrets.REACT_APP_BACKEND_API}}" >> frontend/.env
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
