--- a/.github/workflows/main_online-reader.yml
+++ b/.github/workflows/main_online-reader.yml
@@ -22,6 +22,7 @@ jobs:
     - name: Create .env file
       run: |
         echo "REACT_APP_BACKEND_API = ${{secrets.REACT_APP_BACKEND_API}}" >> frontend/.env
+        cat frontend/.env
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
